# richelieu_yew

./: Cargo.toml
client/: Cargo.toml  index.html  trunk.toml  trunktoml.example
client/src/: main.rs
client/src/app/: mod.rs  rhw.rs
client/src/pages/: mod.rs
client/src/pages/shared/: hw.rs  mod.rs
server/: Cargo.toml
server/examples/: quick_dev.rs
server/src/: ctx.rs  error.rs  log.rs  main.rs  model.rs  routes.rs  storage.rs  token.rs
server/src/model/: product.rs
server/src/routes/: mw_auth.rs  products.rs
src/: main.rs
