[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {git = "https://github.com/yewstack/yew/", features = ["csr"]}
gloo = "0.10.0"
serde = "1.0.189"
serde_json = "1.0.107"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"